--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ show_downloads: false
 theme: jekyll-theme-cayman
 github:
   is_project_page: true
-  repository_url: https://github.com/resident-alien-game/resident-alien-game
+  repository_url: https://github.com/resident-alien-game
 
 gems:
   - jekyll-mentions
